# Vibe-Room-Core

./: .gitignore  Cargo.toml
.gsd/: DECISIONS.md  KNOWLEDGE.md  PROJECT.md  REQUIREMENTS.md  doctor-history.jsonl
.gsd/journal/: 2026-03-23.jsonl
.gsd/milestones/M004/: M004-CONTEXT.md  M004-ROADMAP.md  M004-SUMMARY.md  M004-VALIDATION.md
.gsd/milestones/M005/: M005-CONTEXT.md  M005-RESEARCH.md  M005-ROADMAP.md  M005-SUMMARY.md  M005-VALIDATION.md
.gsd/milestones/M006/: M006-CONTEXT.md  M006-ROADMAP.md  M006-SUMMARY.md  M006-VALIDATION.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/evm/: Cargo.toml
crates/evm/benches/: parallel_vs_sequential.rs
crates/evm/src/: ecrecover_cache.rs  lib.rs  tracer.rs
crates/evm/tests/: block_execution.rs  chain_replay.rs  integration.rs  mv_state_integration.rs  nine_fork_integration.rs
crates/evm/tests/fixtures/: block_63070208.json  prestate_63070208.json  prestate_flat_63070208.json  receipts_63070208.json
crates/mv-state/: Cargo.toml
crates/mv-state/src/: lazy_updates.rs  lib.rs  types.rs  versioned_state.rs
crates/nine-fork/: Cargo.toml
crates/nine-fork/src/: lib.rs  mip4_reserve.rs  mip5_clz.rs  modexp_validate.rs  safety.rs
crates/precompiles/: Cargo.toml
crates/precompiles/src/: lib.rs  registry.rs
crates/precompiles/tests/: precompile_vectors.rs
crates/scheduler/src/: coordinator.rs  lib.rs  parallel_executor.rs  types.rs
crates/state/: Cargo.toml
crates/types/: Cargo.toml
crates/types/src/: account.rs  block.rs  error.rs  lib.rs  result.rs  transaction.rs
scripts/: tsan.sh
(+74 files in other folders)
