[package]
name = "monad-evm"
version = "0.1.0"
edition = "2021"
description = "EVM execution engine for monad-core"

[dependencies]
monad-types = { path = "../types" }
monad-state = { path = "../state" }
monad-mv-state = { path = "../mv-state" }
alloy-primitives = { workspace = true }
dashmap = "6.1"
revm = { version = "36", default-features = false, features = [
    "std",
    "optional_eip3607",
    "optional_no_base_fee",
    "optional_fee_charge",
] }
revm-inspector = "17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hex = "0.4"
monad-nine-fork = { path = "../nine-fork" }
monad-scheduler = { path = "../scheduler" }

[[bench]]
name = "parallel_vs_sequential"
harness = false
